WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51012
Kana should be part of CJK Ideographs in WebCore/platform/graphics/Font.cpp
https://bugs.webkit.org/show_bug.cgi?id=51012
Summary
Kana should be part of CJK Ideographs in WebCore/platform/graphics/Font.cpp
Koan-Sin Tan
Reported
2010-12-13 21:57:23 PST
Created
attachment 76497
[details]
Kata not displayed right in vertical text Katakana and hiragana should be considered part of CJK Ideographs, otherwise they are not displayed correctly in vertical writing
Attachments
Kata not displayed right in vertical text
(110.93 KB, image/png)
2010-12-13 21:57 PST
,
Koan-Sin Tan
no flags
Details
Proposed patch
(3.77 KB, patch)
2010-12-13 22:14 PST
,
Koan-Sin Tan
no flags
Details
Formatted Diff
Diff
Proposed patch
(3.83 KB, patch)
2010-12-13 23:54 PST
,
Koan-Sin Tan
no flags
Details
Formatted Diff
Diff
kana displayed correctly after the patch is applied
(89.28 KB, image/png)
2010-12-14 01:03 PST
,
Koan-Sin Tan
no flags
Details
modified patch with expected result added
(107.41 KB, patch)
2010-12-14 16:55 PST
,
Koan-Sin Tan
no flags
Details
Formatted Diff
Diff
patch with expected results
(107.41 KB, patch)
2010-12-14 17:02 PST
,
Koan-Sin Tan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Koan-Sin Tan
Comment 1
2010-12-13 22:14:33 PST
Created
attachment 76500
[details]
Proposed patch Add the following to CJK ideographs: hiragana: U+3040 - U+309F katakana: U+30A0 - U+30FF Halfwidth and Fullwidth Forms: U+FF00 - U+FFEF Glyphs in Halfwidth and Fullwidth Forms are widely used in CJK. They are mostly used in CJK, I think.
Koan-Sin Tan
Comment 2
2010-12-13 23:54:39 PST
Created
attachment 76508
[details]
Proposed patch Same as 76500, updated to change WebCore::Font::isCJKIdeographOrSymbol introduced in
http://trac.webkit.org/changeset/74005
instead of WebCore::Font::isCJKIdeograph
Koan-Sin Tan
Comment 3
2010-12-14 01:03:15 PST
Created
attachment 76510
[details]
kana displayed correctly after the patch is applied Yes, I know it's broken font, but sometimes people use broken font :-)
Alexey Proskuryakov
Comment 4
2010-12-14 12:04:31 PST
Comment on
attachment 76508
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=76508&action=review
All these checks look slow. I don't know if this is a practical problem.
> LayoutTests/ChangeLog:8 > + Test if kana displayed correctly in vertical text with broken font.
The test should have expected results, see <
http://webkit.org/coding/contributing.html
>.
Koan-Sin Tan
Comment 5
2010-12-14 15:11:49 PST
(In reply to
comment #4
)
> (From update of
attachment 76508
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=76508&action=review
> > All these checks look slow. I don't know if this is a practical problem.
you have to deal with it anyway, right? how about combining checks of contiguous blocks, such as hiragana and katakana? or try to come up some magic arithmetic?
> > LayoutTests/ChangeLog:8 > > + Test if kana displayed correctly in vertical text with broken font. > > The test should have expected results, see <
http://webkit.org/coding/contributing.html
>.
Will do that, thanks.
Alexey Proskuryakov
Comment 6
2010-12-14 15:15:40 PST
This was just a comment in passing, please don't implement any optimizations unless profiling show that this is hot code.
Koan-Sin Tan
Comment 7
2010-12-14 16:55:47 PST
Created
attachment 76594
[details]
modified patch with expected result added Same as 76508. Added expected results.
Koan-Sin Tan
Comment 8
2010-12-14 17:02:35 PST
Created
attachment 76597
[details]
patch with expected results Same as 76594. Deleted a stupid \n introduced by copy-and-paste
WebKit Commit Bot
Comment 9
2010-12-14 19:48:18 PST
Comment on
attachment 76597
[details]
patch with expected results Clearing flags on attachment: 76597 Committed
r74096
: <
http://trac.webkit.org/changeset/74096
>
WebKit Commit Bot
Comment 10
2010-12-14 19:48:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug