2010-12-14  Koan-Sin Tan  <koansin.tan@gmail.com>

Reviewed by Alexey Proskuryakov.

        Kana should be part of CJK Ideographs in WebCore/platform/graphics/Font.cpp
        https://bugs.webkit.org/show_bug.cgi?id=51012

        Test if kana displayed correctly in vertical text with broken font.

        * fast/blockflow/japanese-rl-text-with-broken-font.html: Added.
        * platform/mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.checksum: Added.
        * platform/mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.png: Added.
        * platform/mac/fast/blockflow/japanese-rl-text-with-broken-font-expected.txt: Added.
2010-12-14  Koan-Sin Tan  <koansin.tan@gmail.com>

        Reviewed by Alexey Proskuryakov.

        Kana should be part of CJK Ideographs in WebCore/platform/graphics/Font.cpp
        https://bugs.webkit.org/show_bug.cgi?id=51012

        Kana should be displayed correctly in vertical text with broken font.

        Test: fast/blockflow/japanese-rl-text-with-broken-font.html

        * platform/graphics/Font.cpp:
        (WebCore::Font::isCJKIdeographOrSymbol): add katakana, hiraganna, and Halfwidth and Fullwidth Forms

Canonical link: https://commits.webkit.org/64443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74096 268f45cc-cd09-0410-ab3c-d52691b4dbfc